--- a/R_C14_DADA2/phyloseq/paper_petB_primers/Map.Rmd
+++ b/R_C14_DADA2/phyloseq/paper_petB_primers/Map.Rmd
@@ -9,13 +9,14 @@ output: html_document
 ```{r}
 library(oceanmap)
 library(dplyr)
+library(here)
 
 lat <- c(-46, -40)
 lon <- c(172,-176)
 plotmap(lon=lon, lat=lat)
 
-sampling_location <-  readxl::read_excel("phyloseq/figures_petb compare/supp_sample_list_v1.xlsx", sheet="original_cycle") %>%
-    select(lat, long) %>%
+sampling_location <-  readxl::read_excel(here("phyloseq", "paper_petB_primers", "figures_petb compare", "supp_sample_list_v1.xlsx"), sheet="original_cycle") %>%
+    dplyr::select(lat, long) %>%
     distinct()
 ```
 
@@ -48,23 +49,23 @@ p<-ggplot() +
   geom_sf(data = sites_2) +
   coord_sf(crs=4326,
            xlim = c(172,181), 
-           ylim = c(-46, -41)) +
+           ylim = c(-46, -42)) +
   annotation_scale(location = "br", width_hint = 0.25) +
   theme_bw()
 
 p
 
-pdf("phyloseq/figures_petb compare/map.pdf", height=6, width=5) ; plot(p) ; dev.off()
+pdf("phyloseq/map.pdf", height=4, width=6) ; plot(p) ; dev.off()
 ```
 
 
 #trying ggoceanmaps package
 ```{r}
 library(ggOceanMaps)
-basemap(data= expand.grid(lon = c(-176, 172), lat = c(-46, -40)), rotate = TRUE) +
+basemap(data= expand.grid(lon = c(-179, 172), lat = c(-46, -42)), rotate = TRUE) +
     geom_spatial_point(data = sampling_location, aes(x = long, y = lat)) +
-  scale_y_continuous(breaks = seq(-176, 172, by = 1)) +
-  scale_x_continuous(breaks = seq(-46, -40, by = 1)) 
+  scale_y_continuous(breaks = seq(-179, 172, by = 1)) +
+  scale_x_continuous(breaks = seq(-46, -42, by = 1)) 
 basemap(limits = c(172, -176, -46, -40)) + # a synonym: basemap(dt)
   geom_spatial_point(data = sampling_location, aes(x = long, y = lat))
   geom_spatial_point(data = dt, aes(x = lon, y = lat), color = "red")
