--- a/R_C14_rates calculation/ACOP poster figure.Rmd
+++ b/R_C14_rates calculation/ACOP poster figure.Rmd
@@ -6,6 +6,8 @@ output: html_document
 ---
 
 Poster figure for ACOP. C14 group rates. using method 2 - calculate rate per vial. 
+  filter(!(cycle == "4"& exp == "9"& depth == "DCM"& population == "Nano"& vial == "B")) %>%
+  filter(!(cycle == "1"& exp == "2"& depth == "SUR"& population == "Pico"& vial == "A")) 
 
 ```{r setup, include=FALSE}
   knitr::opts_chunk$set(message=FALSE,
@@ -43,7 +45,13 @@ pp_rates <- readxl::read_excel("C14_rates per group_method2.xlsx")  %>%
                                 "DCM" = "DCM")) %>%
   mutate(population_name= recode(population, "Syn" = "Synechococcus",
                                              "Pico" = "Picoeukaryotes",
-                                             "Nano" = "Nanoeukaryotes"))
+                                             "Nano" = "Nanoeukaryotes")) %>%
+  rename(depth = sample) 
+
+pp_rates_2 <- pp_rates %>%
+  filter(!(cycle == "4"& exp == "9"& depth == "DCM"& population == "Nano"& vial == "B")) %>%
+  filter(!(cycle == "1"& exp == "2"& depth == "SUR"& population == "Pico"& vial == "A")) %>%
+  mutate(water_depth = str_c(water_mass, depth_cat, sep = "_"))
 ```
 
 #Colours for cycle
@@ -57,7 +65,7 @@ pp_rates$water_mass <- factor(pp_rates$water_mass, levels = c("ST", "SA"))
 pp_rates$cycle_name <- factor(pp_rates$cycle_name, levels = c("ST1", "ST2", "SA1", "SA2", "SA3"))
 pp_rates$population_name <- factor(pp_rates$population_name, levels = c("Synechococcus", "Picoeukaryotes", "Nanoeukaryotes"))
 pp_rates$population <- factor(pp_rates$population, levels = c("Syn", "Pico", "Nano"))
-pp_rates$depth_cat <- factor(pp_rates$depth_cat, levels = c("Surface", "DCM"))
+#pp_rates$depth_cat <- factor(pp_rates$depth_cat, levels = c("Surface", "DCM"))
 p1 <- pp_rates %>%
   ggplot(aes(x = population, y = pp, color = cycle_name, shape = depth_cat))  +
   geom_jitter(width = 0.05) +
@@ -100,11 +108,34 @@ p3 <- pp_rates %>%
   scale_color_manual(values = colours_cycle, name = "Station") +
   scale_shape_discrete(name = "Depth") +
   scale_y_continuous(trans='log10') +
-  annotation_logticks(sides = "l") 
+  annotation_logticks(sides = "l") +
+  theme(legend.position="bottom", 
+       panel.spacing.x = unit(0,"line"))
 
 p3
+pdf("figures/GRC/pp_rates_group_2.pdf", height=4, width=6) ; plot(p3) ; dev.off()
 
-pdf("figures/ACOP_figures/pp_rates_group.pdf", height=4, width=6) ; plot(p3) ; dev.off()
+
+p4 <- pp_rates_2 %>%
+  ggplot(aes(x = water_depth, y = pp))  +
+#  geom_violin()+
+# geom_boxplot(outlier.shape = NA) + 
+  geom_jitter(aes(color = cycle_name, shape = depth_cat), width = 0.2) +
+  geom_boxplot( alpha = 0)+
+  #geom_boxplot(width=0.5, alpha = 0, color = "#424242")+
+  xlab("Water mass") +
+  ylab(expression(Primary~Production~(fgC~cell^-1~day^-1))) +
+  theme_bw() +
+  facet_grid(.~ population) +
+  scale_color_manual(values = colours_cycle, name = "Station") +
+  scale_shape_discrete(name = "Depth") +
+  scale_y_continuous(trans='log10') +
+  annotation_logticks(sides = "l") +
+  theme(legend.position="bottom", 
+       panel.spacing.x = unit(0,"line"))
+p4
+
+pdf("figures/GRC/pp_rates_group.pdf", height=4, width=6) ; plot(p4) ; dev.off()
 
 ```
 
