--- a/R_C14_rates calculation/QE_temp and chl map.Rmd
+++ b/R_C14_rates calculation/QE_temp and chl map.Rmd
@@ -17,6 +17,7 @@ Denise note:
 -https://rpubs.com/jonesey441/NetCDF-data 
 
 ```{r}
+library(here)
 library(ncdf4) # package for netcdf manipulation
 library(raster) # package for raster manipulation
 library(rgdal) # package for geospatial analysis
@@ -25,11 +26,25 @@ library(lattice)
 library(RColorBrewer)
 ```
 
+#import as raster - trying to raster ignore
+```{r}
+# set path and filename
+ncpath <- "../data_used/AQUA_MODIS.20181101_20181130.L3m.MO.NSST.sst.4km.nc"
+dname <- "sst"  # note: tmp means temperature (not temporary)
+tmp_raster <- brick(ncpath, varname="sst")
+tmp_raster; class(tmp_raster)
+
+#subset data for NZ area (coordinates lat -46 to -41, lon 172 to -176)
+e <- extent(-46, -42, 172, 180)
+fc
+```
+
 #Plot SST
 ```{r}
 dname <- "sst"
-nc_SST <- nc_open( '../data_used/AQUA_MODIS.20181101_20181130.L3m.MO.NSST.sst.4km.nc')
-#print(nc_SST)
+nc_SST <- ncdf4::nc_open( 'data_used/AQUA_MODIS.20181101_20181130.L3m.MO.NSST.sst.4km.nc')
+
+print(nc_SST)
 ```
 
 ```{r}
@@ -68,12 +83,13 @@ Conventions <- ncatt_get(nc_SST,0,"Conventions")
 
 ```{r}
 #subset data for NZ area (coordinates lat -46 to -41, lon 172 to -176)
-lon_sub <- which( nc_SST$dim$lon$vals > 172 | nc_SST$dim$lon$vals < -176)
-lat_sub <- which( nc_SST$dim$lat$vals > -46 & nc_SST $dim$lat$vals < -41)
-lon_sub <- c(which(nc_SST$dim$lon$vals > 172) , which(nc_SST$dim$lon$vals < -176) )
+lon_sub <- which( nc_SST$dim$lon$vals > 171 | nc_SST$dim$lon$vals < -178)
+lat_sub <- which( nc_SST$dim$lat$vals > -47 & nc_SST $dim$lat$vals < -41.5)
+lon_sub <- c(which(nc_SST$dim$lon$vals > 171) , which(nc_SST$dim$lon$vals < -178) )
 # replace netCDF fill values with NA's
 tmp_array[tmp_array==fillvalue$value] <- NA
 temp_nz <- tmp_array [lon_sub, lat_sub]
+print(temp_nz)
 nc_close(nc_SST)
 ```
 
@@ -99,20 +115,105 @@ raster_temp_nz
 ```{r}
 temp_nz_df <- as.data.frame(raster_temp_nz, xy = TRUE)
 str(temp_nz_df)
+library(paletteer)
 
 #error here. The axis values are not coordinates (lat -46 to -41, lon 172 to -176). I think the way would be to create a new create a column with the coordinates, but because of the way the data is formed I'm not sure how to do.
+
 plot_temp<- ggplot() +
-    geom_raster(data = temp_nz_df , aes(x = x, y = y, fill = layer)) +
-    scale_fill_viridis_c() +
-    coord_quickmap()+
-    theme(aspect.ratio = 3/4)
+  geom_raster(data = temp_nz_df , aes(x = x, y = y, fill = layer))+
+  #scale_colour_paletteer_c("ggthemes::Red-Blue Diverging", limits=c(9, 15))
+  scale_fill_gradientn(colours=rev(brewer.pal(20,"RdBu")), breaks = c(9, 10, 11, 12, 13, 14, 15)) 
+  
 plot_temp
+pdf("figures/GRC/map_temp.pdf", height=4, width=6) ; plot(plot_temp) ; dev.off()
 
 ```
 
-# Plot Chlorophyll data
 ```{r}
-nc_chl <- nc_open( '../data_used/A20183052018334.L3m_MO_CHL_chlor_a_4km.nc')
+library(dplyr)
+library(tidyverse)
+library(ggplot2)
+library(broom)
+```
+
+
+## Coordinates of stations
+```{r}
+sampling_location <- readxl::read_excel("data_used/TAN1810_14C-Pico_25052020_QA_1.0.xlsx", sheet = "Complete data TAN1810", skip = 11) %>%
+  dplyr::select (`Cycle#`, `EXP#`, `Lat_DD`, `Long_DD`) %>%   
+     rename(cycle = `Cycle#`,
+            exp = `EXP#`,
+            lat = Lat_DD, 
+            long = Long_DD) %>%
+  distinct() %>%
+  na.omit() %>%
+  group_by(cycle, exp) %>%
+  slice(1)
+```
+
+
+```{r}
+library(ggplot2)
+library(rnaturalearth)
+library(rnaturalearthdata)
+library(sf)
+library(rgeos)
+library(ggspatial)
+
+lat <- c(-46, -40)
+lon <- c(172,-176)
+
+# load data
+world <- ne_countries(scale = "medium", returnclass = "sf")
+
+#deal with dateline using st_shift_longitude
+world_2 = st_shift_longitude(world)
+
+sites_2 = st_as_sf(sampling_location,
+                   coords = c("long", "lat"),
+                   crs = 4326) %>%
+  st_shift_longitude()
+
+p<-ggplot() +
+  geom_sf(data = world_2) +
+  geom_sf(data = sites_2) +
+  coord_sf(crs=4326,
+           xlim = c(172,181), 
+           ylim = c(-46, -42)) +
+  annotation_scale(location = "br", width_hint = 0.25) +
+  theme_bw()
+
+p
+
+pdf("figures/GRC/map_stations.pdf", height=4, width=6) ; plot(p) ; dev.off()
+#pdf("phyloseq/map.pdf", height=4, width=6) ; plot(p) ; dev.off()
+```
+
+#trying to make into a raster - ignore.
+```{r}
+#convert the raster to points for plotting
+map.p <- rasterToPoints(tmp_raster)
+#Make the points a dataframe for ggplot
+df <- data.frame(map.p)
+#Make appropriate column headings
+colnames(df) <- c("Longitude", "Latitude", "sst")
+
+library(dplyr)
+df_2 <- df %>%
+  sf::st_shift_longitude()
+  filter(between(Latitude, -46, -41)) %>%
+  filter(between(Longitude, 172, 180))
+  
+plot_temp<- ggplot(data=df, aes(y=Latitude, x=Longitude)) +
+    geom_raster(aes(fill=sst)) +
+  scale_fill_continuous(palette = "RdBu")
+plot_temp
+```
+
+
+# Plot Chlorophyll data - not working
+```{r}
+nc_chl <- ncdf4::nc_open( 'data_used/A20183052018334.L3m_MO_CHL_chlor_a_4km.nc')
 #print(nc_chl)
 
 varname<-names(nc_chl$var)
@@ -149,8 +250,8 @@ dim(chl_array) #verify the size of the array - same as lat lon
 ```{r}
 #subset data for NZ area (coordinates lat -47 to -41, long 172 to -176)
 #subset is not working, gives empty integers. Why?
-lon_sub_chl <- which( nc_chl$dim$lon_chl$vals > 172 | nc_chl$dim$lon_chl$vals < -176)
-lat_sub_chl <- which( nc_chl$dim$lat_chl$vals > -47 & nc_chl $dim$lat$vals < -41)
+lon_sub_chl <- which(nc_chl$dim$lon_chl$vals > 171 | nc_chl$dim$lon_chl$vals < -176)
+lat_sub_chl <- which(nc_chl$dim$lat_chl$vals > -48 & nc_chl$dim$lat$vals < -40)
 lon_sub_chl <- c(which(nc_chl$dim$lon_chl$vals > 172) , which(nc_chl$dim$lon_chl$vals < -176) )
 # replace netCDF fill values with NA's
 chl_array[chl_array==fillvalue$value] <- NA
@@ -160,11 +261,12 @@ nc_close(nc_chl)
 
 ```{r}
 #Plot all to check data. Looks ok
-image(lon_chl,lat_chl,chl_array, col=rev(brewer.pal(10,"RdBu")))
+#image(lon_chl,lat_chl,chl_array, col=rev(brewer.pal(10,"RdBu")))
 ```
 
 ```{r}
 #Plot NZ
+
 raster_chl_nz <- raster(chl_nz)
 raster_chl_nz <-  t(raster_chl_nz)
 plot(raster_chl_nz)
