--- a/R_C14_DADA2/phyloseq/paper_petB_primers/20211104_petb compare.Rmd
+++ b/R_C14_DADA2/phyloseq/paper_petB_primers/20211104_petb compare.Rmd
@@ -18,10 +18,10 @@ Remove Richellia
 # Initialize
 ```{r, echo=TRUE, message=FALSE, warning=FALSE}
 
-source("phyloseq/init.R") #for libraries
-source("phyloseq/init_markdown.R") #for markdown libraries
-source("phyloseq/define_functions.R") #functions to 1.transform to dataframe, 2.normalise and 3.create treemaps 
-source("phyloseq/colours_petb.R") #colours
+source("phyloseq/init_files/init.R") #for libraries
+source("phyloseq/init_files/init_markdown.R") #for markdown libraries
+source("phyloseq/init_files/define_functions.R") #functions to 1.transform to dataframe, 2.normalise and 3.create treemaps 
+source("phyloseq/init_files/colours_petb.R") #colours
 ```
 
 ## Read data
